creamos la barra header y la barra lateral, renderizando y seleccionando las categorias y subcategorías anidadas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
-<nav>
-    <h1 class="ui header float-left ml-5 logo-title" routerLink="/">
-      <span style="color:#0c6f7e">El</span><span style="color:#1cb7c7">BARATON!</span>
-    </h1>
-</nav>
+<app-nav-bar></app-nav-bar>
+<app-side-bar></app-side-bar>
 <main>
   <router-outlet></router-outlet>
 </main>
