--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -3,6 +3,9 @@
     <span style="color:#0c6f7e">El</span><span style="color:#1cb7c7">BARATON!</span>
   </h1>
   <div class="container-shopping">
+    <div class="nav-bar-button ml-2 d-block d-sm-block d-lg-none" (click)="showMenuCategories()">
+        <i class="bars icon big"></i>
+    </div>
     <div class="shopping-car dropdown">
       <span class="count animated number_message">0</span>
       <span class="icon"><i class="shopping basket icon"></i></span>
