--- a/src/app/core/side-bar/side-bar.component.css
+++ b/src/app/core/side-bar/side-bar.component.css
@@ -1,12 +1,13 @@
 .sidenav {
   height: 100%;
-  background-color: #111;
   border-right: 1px solid #e5edef;
   background-color: #fff;
   width: 250px;
   overflow: auto;
   padding: 10px 0;
   float: left;
+  position: fixed;
+  margin-top: 60px;
 }
 .sidenav ul{ padding:0px; }
 .sidenav ul li{
@@ -70,5 +71,8 @@
     animation: slowshowing 0.1s ease-in-out;
     -webkit-animation: slowshowing 0.1s ease-in-out;
     -moz-animation: slowshowing 0.1s ease-in-out;
+  }
+  .sidenav{
+    margin-top: 49px;
   }
 }
