--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -1,1 +1,7 @@
-<h1>HOLA MUNDO</h1>
+<div class="content-products">
+    <div class="title">
+        <h1 class="ui header">Todos los productos</h1>
+        <hr>
+    </div>
+    <app-product-card [products]="products.productList"></app-product-card>
+</div>
