--- a/src/app/core/nav-bar/nav-bar.component.css
+++ b/src/app/core/nav-bar/nav-bar.component.css
@@ -6,6 +6,7 @@ nav{
   height: 60px;
   background-color: #fff;
   border-bottom: 1px solid #e5edef;
+  position: fixed;
 }
 nav .header { margin: 0; }
 nav .logo-title{ margin: 10px; cursor: pointer; }
@@ -31,10 +32,11 @@ nav .logo-title{ margin: 10px; cursor: pointer; }
   line-height: 15px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 991px) {
   nav{
     height: 49px;
     padding: 0;
+    z-index: 1002;
   }
   nav .logo-title{
     font-size: 25px;
