--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -1,7 +1,7 @@
 <div class="content-products">
     <div class="title">
-        <h1 class="ui header">Todos los productos</h1>
+        <h1 class="ui header">{{ Title }}</h1>
         <hr>
     </div>
-    <app-product-card [products]="products.productList"></app-product-card>
+    <app-product-card [ProductList]="productList"></app-product-card>
 </div>
