--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -13,5 +13,5 @@
             <hr class="mt-5">
         </div>
     </div>
-    <app-product-card [products]="productList" [rangeFilter]="FilterOptions"></app-product-card>
+    <app-product-card [products]="productList" [rangeFilter]="FilterOptions" (addShopping)="addShopping($event)"></app-product-card>
 </div>
