--- a/src/app/modules/home/components/product-card/product-card.component.css
+++ b/src/app/modules/home/components/product-card/product-card.component.css
@@ -1,6 +1,10 @@
 .cards{
   padding: 10px 60px;
 }
+.header .circular{
+  background-color: #fb5656!important;
+  border-color: #fb5656!important;
+}
 
 @media (max-width: 991px) {
   .card{
