--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
   .box-shadow{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     background-color: black;
     opacity: 0.4;
     z-index: 1000;
