--- a/src/app/core/nav-bar/nav-bar.component.css
+++ b/src/app/core/nav-bar/nav-bar.component.css
@@ -12,7 +12,7 @@ nav{
 nav .header { margin: 0; }
 nav .logo-title{ margin: 10px; cursor: pointer; }
 
-.container-shopping{ padding: 11px 40px; }
+.container-shopping{ padding: 11px 40px; cursor: pointer; }
 .container-shopping .nav-bar-button{ float: right; }
 .container-shopping .shopping-car { float: right; }
 .container-shopping .shopping-car  .icon { color: #00b7c7; font-size: 1.3em; }
@@ -74,7 +74,56 @@ nav .logo-title{ margin: 10px; cursor: pointer; }
 }
 
 /* Cards */
+.cards{ padding-bottom: 60px !important; }
+.card{ margin: 6px 6px !important; }
 .card .content .description{ margin-top: 2.5em !important; }
+.empty-car .icon{ color: rgba(0, 181, 173, 0.5); }
+.empty-car .content { color: rgba(12, 111, 126, 0.4); }
+
+/* Input number */
+.input-number {
+  width: 31px;
+  margin: 0px 5px;
+  vertical-align: top;
+  text-align: center;
+  outline: none;
+}
+
+.input-number,
+.input-number-decrement,
+.input-number-increment {
+  border: none;
+  height: 24px;
+  user-select: none;
+}
+
+.input-number-decrement,
+.input-number-increment {
+  display: inline-block;
+  width: 24px;
+  line-height: 19px;
+  font-size: 24px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 4px;
+}
+.input-number-decrement:active,
+.input-number-increment:active {
+  background: #ddd;
+}
+
+.input-number-decrement {
+  border-right: none;
+  background-color: #fd5757;
+}
+
+.input-number-increment {
+  border-left: none;
+  background-color: #1cb7c7;
+}
+
 
 @media (max-width: 991px) {
   nav{
