--- a/src/app/core/side-bar/side-bar.component.css
+++ b/src/app/core/side-bar/side-bar.component.css
@@ -55,7 +55,7 @@
 @media (max-width: 991px) {
   .float-side-bar{
     display: block !important;
-    position: absolute !important;
+    position: fixed !important;
     z-index: 1001;
     animation: slowshowing 0.1s ease-in-out;
     -webkit-animation: slowshowing 0.1s ease-in-out;
