creamos el buscador cuando no existan más sub niveles y adjunto a este un filtro

--- a/src/app/modules/home/components/product-card/product-card.component.html
+++ b/src/app/modules/home/components/product-card/product-card.component.html
@@ -1,5 +1,5 @@
 <div class="ui cards">
-  <div class="card" *ngFor="let product of products | range:'price':rangeFilter.min:rangeFilter.max | range:'quantity':rangeFilter.minStock:rangeFilter.maxStock | available:'available':rangeFilter.available | orderBy : rangeFilter.sort.field">
+  <div class="card" *ngFor="let product of products | range:'price':rangeFilter.min:rangeFilter.max | range:'quantity':rangeFilter.minStock:rangeFilter.maxStock | available:'available':rangeFilter.available | orderBy : rangeFilter.sort.field | search:'name':rangeFilter.search">
     <div class="content">
       <div class="header">
         {{ product.name | titlecase }}
